Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-4462

mysqld gets SIGFPE when mysql.user table is empty

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Major
    • Resolution: Fixed
    • 5.5.30, 5.2.14, 5.3.12
    • 5.5.31, 5.2.15, 5.3.13
    • None
    • None

    Description

      I realize that having mysql.user empty is a very rare use case, but still I think it's not nice to just crash in the face of someone who screw his database like this.

      The culprit is sql/sql_acl.cc:8159:
      uint i= nr1 % acl_users.elements;

      Attachments

        Activity

          People

            serg Sergei Golubchik
            pivanof Pavel Ivanov
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 0.5h
                0.5h

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.