MDEV-4462 mysqld gets SIGFPE when mysql.user table is empty

avoid divison by zero